Minor fix and update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <style>
         body {
-            background: repeating-linear-gradient(135deg, #dfdfdf 0, #dfdfdf 1%, #fff 0, #fff 50%) 0/20px 20px;
+            /* background: repeating-linear-gradient(135deg, #dfdfdf 0, #dfdfdf 1%, #fff 0, #fff 50%) 0/20px 20px; */
+            background-color: #ffffff;
         }
         .ui.container {
             margin-top: 3em;
