--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <div class="ui container">
+    <div class="ui fluid container">
         <div class="ui grid">
             <div class="eight wide column">
                 <div class="ui horizontal list">
