--- a/index.html
+++ b/index.html
@@ -6,29 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Heiswayi Nrird's GitHub Gists</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.css">
-
     <style>
+        *,::after,::before{box-sizing:border-box}body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent}[tabindex="-1"]:focus:not(:focus-visible){outline:0!important}hr{margin:1rem 0;color:inherit;background-color:currentColor;border:0;opacity:.25}hr:not([size]){height:1px}h1,h2,h3,h4,h5,h6{margin-top:0;margin-bottom:.5rem;font-weight:500;line-height:1.2}h1{font-size:2.5rem}h2{font-size:2rem}h3{font-size:1.75rem}h4{font-size:1.5rem}h5{font-size:1.25rem}h6{font-size:1rem}p{margin-top:0;margin-bottom:1rem}abbr[data-original-title],abbr[title]{text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;cursor:help;-webkit-text-decoration-skip-ink:none;text-decoration-skip-ink:none}address{margin-bottom:1rem;font-style:normal;line-height:inherit}ol,ul{padding-left:2rem}dl,ol,ul{margin-top:0;margin-bottom:1rem}ol ol,ol ul,ul ol,ul ul{margin-bottom:0}dt{font-weight:700}dd{margin-bottom:.5rem;margin-left:0}blockquote{margin:0 0 1rem}b,strong{font-weight:bolder}small{font-size:.875em}sub,sup{position:relative;font-size:.75em;line-height:0;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}a{color:#0d6efd;text-decoration:none}a:hover{color:#024dbc;text-decoration:underline}a:not([href]),a:not([href]):hover{color:inherit;text-decoration:none}code,kbd,pre,samp{font-family:SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;font-size:1em}pre{display:block;margin-top:0;margin-bottom:1rem;overflow:auto;font-size:.875em}pre code{font-size:inherit;color:inherit;word-break:normal}code{font-size:.875em;color:#d63384;word-wrap:break-word}a&gt;code{color:inherit}kbd{padding:.2rem .4rem;font-size:.875em;color:#fff;background-color:#212529;border-radius:.2rem}kbd kbd{padding:0;font-size:1em;font-weight:700}figure{margin:0 0 1rem}img{vertical-align:middle}svg{overflow:hidden;vertical-align:middle}table{border-collapse:collapse}caption{padding-top:.5rem;padding-bottom:.5rem;color:#6c757d;text-align:left;caption-side:bottom}th{text-align:inherit}label{display:inline-block;margin-bottom:.5rem}button{border-radius:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}button,input,optgroup,select,textarea{margin:0;font-family:inherit;font-size:inherit;line-height:inherit}button,input{overflow:visible}button,select{text-transform:none}select{word-wrap:normal}[list]::-webkit-calendar-picker-indicator{display:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled),button:not(:disabled){cursor:pointer}::-moz-focus-inner{padding:0;border-style:none}input[type=date],input[type=datetime-local],input[type=month],input[type=time]{-webkit-appearance:textfield}textarea{overflow:auto;resize:vertical}fieldset{min-width:0;padding:0;margin:0;border:0}legend{float:left;width:100%;padding:0;margin-bottom:.5rem;font-size:1.5rem;line-height:inherit;color:inherit;white-space:normal}mark{padding:.2em;background-color:#fcf8e3}progress{vertical-align:baseline}::-webkit-datetime-edit{overflow:visible;line-height:0}[type=search]{outline-offset:-2px;-webkit-appearance:textfield}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-color-swatch-wrapper{padding:0}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}output{display:inline-block}summary{display:list-item;cursor:pointer}template{display:none}main{display:block}[hidden]{display:none!important}
         body {
-            /* background: repeating-linear-gradient(135deg, #dfdfdf 0, #dfdfdf 1%, #fff 0, #fff 50%) 0/20px 20px; */
-            background-color: #ffffff;
+            padding: 10px;
         }
-        .ui.container {
-            margin-top: 3em;
-            margin-bottom: 3em;
+        table {
+            border-collapse: collapse;
+            width: 100%;
         }
-
-        td.datetime {
-            min-width: 120px;
-            color: rgba(0, 0, 0, .5);
+        td, th {
+            border: 1px solid #ccc;
+            padding: 0.5rem;
+            text-align: left;
         }
-
-        span.middot {
-            color: rgba(0, 0, 0, .5);
+        .datetime {
+            white-space: nowrap;
         }
-
-        div.loading {
-            padding: 20px;
+        .loading {
+            display: none;
         }
     </style>
 
@@ -36,33 +32,15 @@
 
 <body>
 
-    <div class="ui fluid container">
-        <div class="ui grid">
-            <div class="eight wide column">
-                <div class="ui horizontal list">
-                    <div class="item">
-                        <img class="ui avatar image" src="https://avatars0.githubusercontent.com/u/13794983?v=4">
-                        <div class="content">
-                            <div class="header">Heiswayi Nrird</div>
-                            <a href="https://heiswayi.nrird.com">https://heiswayi.nrird.com</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="eight wide column">
-                <a href="https://gist.github.com/heiswayi" class="right floated compact ui labeled icon blue button" title="Go to Gist">
-                    <i class="github alternate icon"></i>
-                    Gist
-                </a>
-            </div>
-        </div>
-        <table class="ui selectable table" id="myTable">
+    <div class="container">
+        <p id="loading"></p>
+        <p>
+            <big>My Public GitHub Gist</big><br/>
+            <small>gist.github.com/heiswayi</small>
+        </p>
+        
+        <table class="table" id="myTable">
             <thead>
-                <tr class="heading">
-                    <th colspan="5">
-                        <h3>GitHub Gist</h3>
-                    </th>
-                </tr>
                 <tr>
                     <th>File</th>
                     <th>Description</th>
@@ -74,14 +52,12 @@
     </div>
 
     <script src="jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.js"></script>
     <script type="text/javascript">
         jQuery.githubUser = function (username, callback) {
-            jQuery.getJSON('https://api.github.com/users/' + username + '/gists?callback=?&per_page=100', callback)
+            jQuery.getJSON('https://api.github.com/users/' + username + '/gists?callback=?&per_page=1000', callback)
         }
-
         jQuery.fn.loadGists = function (username) {
-            this.html('<div class="loading">Querying GitHub for ' + username + '\'s gists...</div>');
+            $("#loading").html(`Querying GitHub for ${username}'s gists...`);
 
             var target = this;
             $.githubUser(username, function (data) {
@@ -92,12 +68,13 @@
                     target.append('<tr>' +
                         '<td class="item"><a href="' + (this.homepage ? this.homepage : this.html_url) +
                         '">' + Object.keys(this.files).join(
-                            "<span class='middot'> • </span>") + '</a></td>' +
+                            "<br/>") + '</a></td>' +
                         '<td class="description">' + this.description + '</td>' +
                         '<td class="datetime"><span title="' + realDate(this.updated_at) + '">' +
                         prettyDate(this.updated_at) + '</span></td>' +
                         '</tr>');
                 });
+                $("#loading").hide();
             });
 
             function sortByName(data) {
